--- a/Day2_Algorithms_Lecture.ipynb
+++ b/Day2_Algorithms_Lecture.ipynb
@@ -53,18 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "BEFORE SWAP: [20, 4, 10]\n",
-      "AFTER SWAP: [10, 4, 20]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# var[1],var[i+1] = var[i+1], var[i]\n",
     "# Sometimes know as a swap algorithm\n",
@@ -89,20 +80,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[20, 4, 10]\n",
-      "[10, 4, 20]\n",
-      "Before Swap: ['a', 'b', 'c', 'd']\n",
-      "After Swap: ['d', 'c', 'b', 'a']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Not swapping, but rather reversing completely\n",
     "# BUT also copies to another place in memory\n",
@@ -135,20 +115,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[3, 10, 4, 8, 4, 2, 6]"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "l_1 = [10, 4, 3, 8, 4, 2, 6]\n",
     "\n",
@@ -175,20 +144,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[100, 2, 33, 8, 5, 2, 5, 23, 12, 3, 2, 1]"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# alist[left], alist[right] = alist[right], alist[left]\n",
     "# Use two pointer to swap, can use a while loop in most cases\n",
@@ -239,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,20 +224,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 22, 34, 44, 55, 66, 88, 100]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "bubble_sort([22,55,88,44,1,100,34,66])"
    ]
@@ -295,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,20 +260,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[1, 22, 34, 44, 55, 66, 88, 100]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "insertion_sort([22,55,88,44,1,100,34,66])"
    ]
@@ -347,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -413,60 +349,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Splitting... [0, 5, 10, 2, 4, 20, 7, 6, 16, 20]\n",
-      "Splitting... [0, 5, 10, 2, 4]\n",
-      "Splitting... [0, 5]\n",
-      "Splitting... [0]\n",
-      "Merging... [0]\n",
+      "Splitting... [5, 10, 4, 10, 19, 1, 6, 12, 17, 1]\n",
+      "Splitting... [5, 10, 4, 10, 19]\n",
+      "Splitting... [5, 10]\n",
       "Splitting... [5]\n",
       "Merging... [5]\n",
-      "Merging... [0, 5]\n",
-      "Splitting... [10, 2, 4]\n",
       "Splitting... [10]\n",
       "Merging... [10]\n",
-      "Splitting... [2, 4]\n",
-      "Splitting... [2]\n",
-      "Merging... [2]\n",
+      "Merging... [5, 10]\n",
+      "Splitting... [4, 10, 19]\n",
       "Splitting... [4]\n",
       "Merging... [4]\n",
-      "Merging... [2, 4]\n",
-      "Merging... [2, 4, 10]\n",
-      "Merging... [0, 2, 4, 5, 10]\n",
-      "Splitting... [20, 7, 6, 16, 20]\n",
-      "Splitting... [20, 7]\n",
-      "Splitting... [20]\n",
-      "Merging... [20]\n",
-      "Splitting... [7]\n",
-      "Merging... [7]\n",
-      "Merging... [7, 20]\n",
-      "Splitting... [6, 16, 20]\n",
+      "Splitting... [10, 19]\n",
+      "Splitting... [10]\n",
+      "Merging... [10]\n",
+      "Splitting... [19]\n",
+      "Merging... [19]\n",
+      "Merging... [10, 19]\n",
+      "Merging... [4, 10, 19]\n",
+      "Merging... [4, 5, 10, 10, 19]\n",
+      "Splitting... [1, 6, 12, 17, 1]\n",
+      "Splitting... [1, 6]\n",
+      "Splitting... [1]\n",
+      "Merging... [1]\n",
       "Splitting... [6]\n",
       "Merging... [6]\n",
-      "Splitting... [16, 20]\n",
-      "Splitting... [16]\n",
-      "Merging... [16]\n",
-      "Splitting... [20]\n",
-      "Merging... [20]\n",
-      "Merging... [16, 20]\n",
-      "Merging... [6, 16, 20]\n",
-      "Merging... [6, 7, 16, 20, 20]\n",
-      "Merging... [0, 2, 4, 5, 6, 7, 10, 16, 20, 20]\n"
+      "Merging... [1, 6]\n",
+      "Splitting... [12, 17, 1]\n",
+      "Splitting... [12]\n",
+      "Merging... [12]\n",
+      "Splitting... [17, 1]\n",
+      "Splitting... [17]\n",
+      "Merging... [17]\n",
+      "Splitting... [1]\n",
+      "Merging... [1]\n",
+      "Merging... [1, 17]\n",
+      "Merging... [1, 12, 17]\n",
+      "Merging... [1, 1, 6, 12, 17]\n",
+      "Merging... [1, 1, 4, 5, 6, 10, 10, 12, 17, 19]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0, 2, 4, 5, 6, 7, 10, 16, 20, 20]"
+       "[1, 1, 4, 5, 6, 10, 10, 12, 17, 19]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -488,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +433,7 @@
        "'The index is... 5'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,11 +476,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['.', 'ecnetnes', 'taen', 'a', 'si', 'siht']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "words = ['this' , 'is', 'a', 'sentence', '.']\n"
+    "words = ['this' , 'is', 'a', 'neat', 'sentence', '.']\n",
+    "\n",
+    "def reverse_list(word_list):\n",
+    "    left = 0\n",
+    "    right = len(word_list) - 1\n",
+    "    while left <= right:\n",
+    "        word_list[left], word_list[right] = word_list[right][::-1], word_list[left][::-1]\n",
+    "        left += 1\n",
+    "        right -= 1\n",
+    "    return word_list\n",
+    "\n",
+    "reverse_list(words)"
    ]
   },
   {
@@ -560,12 +518,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Counter({'a': 5, 'hash': 4, 'an': 3, 'table': 2, 'map': 2, 'data': 2, 'structure': 2, 'which': 2, 'array': 2, 'can': 2, 'to': 2, 'in': 1, 'computing,': 1, 'is': 1, 'implements': 1, 'associative': 1, 'abstract': 1, 'type,': 1, 'that': 1, 'keys': 1, 'values.': 1, 'uses': 1, 'function': 1, 'compute': 1, 'index': 1, 'into': 1, 'of': 1, 'buckets': 1, 'or': 1, 'slots': 1, 'from': 1, 'the': 1, 'desired': 1, 'value': 1, 'be': 1, 'found': 1})\n"
+     ]
+    }
+   ],
    "source": [
     "a_text = 'In computing, a hash table hash map is a data structure which implements an associative array abstract data type, a structure that can map keys to values. A hash table uses a hash function to compute an index into an array of buckets or slots from which the desired value can be found'\n",
-    "\n"
+    "\n",
+    "from collections import Counter\n",
+    "\n",
+    "def count(string):\n",
+    "    c = Counter(string.lower().split())\n",
+    "    return c\n",
+    "\n",
+    "print(count(a_text))"
    ]
   },
   {
@@ -577,6 +550,35 @@
     "Write a program to implement a Linear Search Algorithm. Also in a comment, write the Time Complexity of the following algorithm.\n",
     "\n",
     "#### Hint: Linear Searching will require searching a list for a given number. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'The index is...5'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nums_list = [10,23,45,70,11,15]\n",
+    "target = 70\n",
+    "\n",
+    "def linear_search(alist, target):\n",
+    "    for i in range(len(alist)):\n",
+    "        if alist[i] == target:\n",
+    "            return f'The index is...{i}'\n",
+    "    return -1\n",
+    "\n",
+    "linear_search(words, 'siht')"
    ]
   },
   {
